<resources>
    <string name="app_name">Glucose Meter</string>
    <string name="app_home">Home</string>
    <string name="app_history">History</string>
    <string name="app_graph">Graph</string>
    <string name="app_setting">Setting</string>
    <string name="app_help">Help</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_info">Info</string>
    <string name="action_filter">Filter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_write">Write A Note</string>
    <string name="filter_filter">Filter</string>
    <string name="filter_toDate">To date</string>
    <string name="filter_clickToAddDate">Click to add a To date</string>
    <string name="filter_frmDate">From date</string>
    <string name="filter_clickToAddFromDate">Click to add a From date</string>
    <string name="filter_sort">Sort</string>
    <string name="filter_value">Value / Level</string>
    <string name="filter_date">Date</string>
    <string name="filter_btnAscending">Ascending</string>
    <string name="filter_btnDescending">Descending</string>
    <string name="filter_btnConfirm">Confirm</string>
    <string name="filter_btnCancel">Cancel</string>

    <string name="Measured_Level"> Measured level</string>
    <string name="Date">Date</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected !!!</string>
    <string name="service_discovered">Services discovered</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="device_not_found">Device not found ! Scanning timed out.</string>
    <string name="scanning_error">Scanning error: </string>
    <string name="connecting">Connecting…</string>
    <string name="scanning_interrupted">Scanning interrupted !</string>
    <string name="ready_to_measure">Ready to measure !</string>
    <string name="scanning">Scanning…</string>
    <string name="services_discovery">Discovering services…</string>
    <string name="writing_descriptor">Writing descriptor…</string>
    <string name="requesting_value">Requesting value…</string>
    <string name="glucose_level_very_low">Your glucose level is extremely low !!!</string>
    <string name="glucose_level_low">Your glucose level is low !</string>
    <string name="glucose_level_optimal">Your glucose level optimal.</string>
    <string name="glucose_level_high">Your glucose level is high !</string>
    <string name="glucose_level_very_high">Your glucose level is extremely high !!!</string>
    <string name="measuring">Measuring…</string>
    <string name="uploading_value">Uploading Measurement…</string>
    <string name="error_uploading_internet">Could NOT Save measurement.\nYou are not connected to Internet !!!</string>
    <string name="error_uploading_timeout">Could NOT Save measurement.\nCheck your internet connection !!!</string>
    <string name="error_uploading_unknown">Could NOT Save measurement.\n Unknown error !!!</string>
    <string name="value_uploaded">Measurement uploaded !</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <string name="GM_not_found">Glucose meter not found !!!</string>
</resources>
