<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/BarColor"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:id="@+id/scrl"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextFilter"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/filter_filter"
                android:textSize="20dp"
                android:textStyle="bold" />

                        <TextView
                android:id="@+id/tvLabelFromDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/filter_frmDate"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/endDateDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/date_selector"
                android:text="@string/filter_clickToAddFromDate" />

            <TextView
                android:id="@+id/tvLabelToDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/filter_toDate"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/startDateDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/date_selector"
                android:text="@string/filter_clickToAddDate" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:rowCount="4"
                android:columnCount="6">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_column="2"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_row="1"
                    android:layout_gravity="fill"
                    android:src="@drawable/ic_light_orange_icon"
                    />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_column="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_row="1"
                    android:layout_gravity="fill"
                    android:src="@drawable/ic_light_red_icon"/>


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_column="3"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_row="1"
                    android:layout_gravity="fill"
                    android:src="@drawable/ic_green_icon" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_column="4"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_row="1"
                    android:layout_gravity="fill"
                    android:src="@drawable/ic_orange_icon" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_column="5"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="fill"
                    android:layout_row="1"
                    android:src="@drawable/ic_red_icon" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:scaleX="1.50"
                    android:scaleY="1.50"
                    android:layout_row="2"/>

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:scaleX="1.50"
                    android:scaleY="1.50"
                    android:layout_row="2" />

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:scaleX="1.50"
                    android:scaleY="1.50"
                    android:layout_row="2" />

                <CheckBox
                    android:id="@+id/checkBox6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="4"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:scaleX="1.50"
                    android:scaleY="1.50"
                    android:layout_row="2" />

                <CheckBox
                    android:id="@+id/checkBox7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="5"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:scaleX="1.50"
                    android:scaleY="1.50"
                    android:layout_row="2" />


            </GridLayout>

            <TextView
                android:id="@+id/TextSort"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/filter_sort"
                android:textSize="20dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/TextDate"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_gravity="left"
                android:text="@string/filter_date"
                android:textSize="15dp"
                android:textStyle="bold"/>

        <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


            <Button
                android:id="@+id/dateAscending"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:layout_marginRight="20dp"
                android:text="@string/filter_btnAscending" />

            <Button
                android:id="@+id/dateDescending"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:text="@string/filter_btnDescending" />
</GridLayout>


            <TextView
                android:id="@+id/TextValue"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/filter_value"
                android:textSize="15dp"
                android:textStyle="bold" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/valueDescending"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="left"
                    android:layout_marginRight="20dp"
                    android:text="@string/filter_btnDescending" />

                <Button
                    android:id="@+id/valueAscending"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:text="@string/filter_btnAscending" />


            </GridLayout>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >


                <Button
                    android:id="@+id/btnConfirm"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/filter_btnConfirm" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_marginTop="20dp"
                    android:text="@string/filter_btnCancel" />
            </GridLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>